added param files

--- a/reg_model/create_param_files.ipynb
+++ b/reg_model/create_param_files.ipynb
@@ -2,13 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-07-04T21:12:18.536472728Z",
-     "start_time": "2023-07-04T21:12:18.490627680Z"
-    }
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -31,7 +28,7 @@
     }
    ],
    "source": [
-    "dataset_grid_res = {x.split('_')[0]: x for x in os.listdir('grid_search_results') if x.endswith('.csv')}\n",
+    "dataset_grid_res = {x.split('_')[0]: x for x in os.listdir('grid_search_results') if x.endswith('.csv') and 'process' not in x}\n",
     "dataset_grid_res"
    ],
    "metadata": {
